@@ -27,6 +27,7 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.lucene.store.Directory;
@@ -215,11 +216,22 @@ public abstract class DirectoryFactory implements NamedListInitializedPlugin,
    * Returns the Directory for a given path, using the specified rawLockType.
    * Will return the same Directory instance for the same path.
    * 
-   * 
    * @throws IOException If there is a low-level I/O error.
    */
-  public abstract Directory get(String path, DirContext dirContext, String rawLockType)
-      throws IOException;
+  public Directory get(String path, DirContext dirContext, String rawLockType) throws IOException {
+    return get(path, dirContext, rawLockType, Function.identity());
+  }
+
+  /**
+   * Returns the Directory for a given path, using the specified rawLockType.
+   * Will return the same Directory instance for the same path.
+   *
+   * @param wrappingFunction A function called to wrap the internally {@link #create(String, LockFactory, DirContext) created}
+   *                         {@link Directory} with another {@link Directory}. Use {@link Function#identity()} for no wrapping.
+   * @throws IOException If there is a low-level I/O error.
+   */
+  public abstract Directory get(String path, DirContext dirContext, String rawLockType, Function<Directory, Directory> wrappingFunction)
+          throws IOException;
   
   /**
    * Increment the number of references to the given Directory. You must call
