@@ -228,6 +228,8 @@ Improvements
 
 * SOLR-14413: Allow timeAllowed and cursorMark parameters together. (John Gallagher via Mike Drob)
 
+* SOLR-15060: Introduce DelegatingDirectoryFactory. (Bruno Roustant)
+
 Optimizations
 ---------------------
 * SOLR-14975: Optimize CoreContainer.getAllCoreNames, getLoadedCoreNames and getCoreDescriptors. (Bruno Roustant)
